create menu and add some items. implemented copying to clipboard

--- a/Limetray/Limetray.vcxproj.filters
+++ b/Limetray/Limetray.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\limetray.c">
+    <ClCompile Include="src\limetray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
