--- a/Limetray/Limetray.vcxproj
+++ b/Limetray/Limetray.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\limetray.c" />
+    <ClCompile Include="src\limetray.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
