set up the settings window

--- a/Limetray.vcxproj
+++ b/Limetray.vcxproj
@@ -104,6 +104,18 @@
     <ClCompile>
       <PreprocessorDefinitions>UNICODE</PreprocessorDefinitions>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>ComCtl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalManifestDependencies>
+      </AdditionalManifestDependencies>
+    </Link>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <Link>
+      <AdditionalDependencies>ComCtl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalManifestDependencies>
+      </AdditionalManifestDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="limetray\src\limetray.c" />
