start working on settings tab

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
                 "cwd": "${workspaceFolder}"
             },
             "windows": {
-                "command": "call ${cwd}/build.bat"
+                "command": "${cwd}/build.bat"
             },
             "problemMatcher": []
         }
